# matrix_multiply_openmp

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  redme.md
libs/: CMakeLists.txt
libs/matplotlibcpp/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/matrix/: i_matrix_multiplications.hpp  matrix.cpp  matrix.hpp  matrix_array.cpp  matrix_array.hpp  matrix_multiplication_output.hpp  matrix_multiplications.cpp  matrix_multiplications.hpp
src/types/: types.hpp
src/utils/: matplotlibcpp_helpers.hpp  matrix_operations.cpp  matrix_operations.hpp
